[gd_scene load_steps=3 format=2]

[ext_resource path="res://art/image.png" type="Texture" id=1]
[ext_resource path="res://main/options.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -510.5
margin_top = -300.0
margin_right = 510.5
margin_bottom = 300.0
script = ExtResource( 2 )

[node name="Image" type="Sprite" parent="."]
position = Vector2( 511.25, 300 )
scale = Vector2( 1.42431, 1.4742 )
texture = ExtResource( 1 )

[node name="backButton" type="Button" parent="."]
margin_left = 206.5
margin_top = 472.0
margin_right = 846.5
margin_bottom = 492.0
text = "Back"

[node name="Options" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -319.5
margin_top = -124.0
margin_right = 320.5
margin_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="Options"]
margin_right = 640.0
margin_bottom = 20.0

[node name="resolution" type="Label" parent="Options/HBoxContainer"]
margin_top = 3.0
margin_right = 68.0
margin_bottom = 17.0
text = "Resolution"

[node name="OptionButton" type="OptionButton" parent="Options/HBoxContainer"]
margin_left = 72.0
margin_right = 640.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="fullScreenContainer" type="HBoxContainer" parent="Options"]
margin_top = 24.0
margin_right = 640.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="Options/fullScreenContainer"]
margin_top = 5.0
margin_right = 70.0
margin_bottom = 19.0
text = "Full Screen"

[node name="fullScreenTag" type="CheckBox" parent="Options/fullScreenContainer"]
margin_left = 74.0
margin_right = 98.0
margin_bottom = 24.0

[connection signal="pressed" from="backButton" to="." method="_on_backButton_pressed"]
[connection signal="item_selected" from="Options/HBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="toggled" from="Options/fullScreenContainer/fullScreenTag" to="." method="_on_fullScreenTag_toggled"]
